--- a/Exercises and Homework/Lesson 10/05_StartupMatchmaker_Nav_Lab_Responsive/starter_code/css/startupMatchMaker.css
+++ b/Exercises and Homework/Lesson 10/05_StartupMatchmaker_Nav_Lab_Responsive/starter_code/css/startupMatchMaker.css
@@ -89,10 +89,10 @@ a {
 
 
 
-// Create a media query that only applies when the screen is between 640px and 800px
+/* Create a media query that only applies when the screen is between 640px and 800px */
 
 
-// Create a media query that only applies when the screen is LESS than 640px
+/* Create a media query that only applies when the screen is LESS than 640px */
 
 
 /* BODY LAYOUT */
